--- a/practical-3/design 1/index.html
+++ b/practical-3/design 1/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>software</title>
+    <title>Homer</title>
     <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
-    <div class="software"></div>
+    <div class="homer"></div>
 </body>
 </html>
